Simplify purchase payments and commodity settings
Drop per-purchase Unpaid/Paid tracking and payment posting from the
ledger (purchases are bills-only; money moves through party ledger /
cash book instead), and remove the bag-weight auto-calc from commodity
settings so bag counts are always entered directly.

Co-authored-by: Cursor <cursoragent@cursor.com>